# animpy

./: 404.html  CONTRIBUTING.md  LISCENSE  README.md  RELEASE_NOTES.md  SECURITY.md  __init__.py  animpy.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: docs.yml
.gitignore/animpy.egg-info/: PKG-INFO  top_level.txt
animpy-docs/: mkdocs.yml
animpy-docs/animpy-docs/site/: 404.html
animpy-docs/animpy-docs/site/features/: index.html
animpy-docs/animpy-docs/site/release-notes/: index.html
animpy-docs/animpy-docs/site/search/: search_index.json
animpy-docs/animpy/animpy-docs/site/: 404.html  index.html
animpy-docs/animpy/animpy-docs/site/api/: index.html
animpy-docs/animpy/animpy-docs/site/features/: index.html
animpy-docs/docs/: api.md  features.md  index.md  release-notes.md
animpy-docs/site/: 404.html  index.html
animpy-docs/site/api/: index.html
animpy-docs/site/features/: index.html
animpy-docs/site/search/: search_index.json
animpy.egg-info/: PKG-INFO  SOURCES.txt
api/: index.html
core/: __init__.py  animation.py  audio.py  coords.py  group.py  particles.py  scene.py  shapes.py  text.py  utils.py
examples/: audio.py  collision.py  keyframes.py  lerp.py  loading.py  particleburst.py  particlesim.py  physics.py  playercontrol.py  taggame.py  zenofpython.py
features/: index.html
search/: search_index.json
tests/: __init__.py  test_animation.py  test_group.py  test_particles.py  test_scene.py  test_shapes.py  test_text.py  test_utils.py
(+1 files in other folders)
