[project]
name = "animpy"
version = "2.0.0"
description = "A simple terminal animation library"
authors = [
  {name = "Samin Riyaz"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools", "wheel", "pygame-ce", "keyboard", "mouse", "rich"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://13DoesPython.github.io/animpy/"
Homepage = "https://github.com/13DoesPython/animpy"
Issues = "https://github.com/13DoesPython/animpy/issues"
Repository = "https://github.com/13DoesPython/animpy.git"
